--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">ResikApp</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Recyling</string>
+    <string name="title_notifications">Setting</string>
+    <string name="daftar">Daftar</string>
+    <string name="sudah_punya_akun_login_disini">Sudah punya akun ? </string>
+    <string name="password">Password</string>
+    <string name="nomer_hp">nomer hp</string>
+    <string name="alamat_email">alamat email</string>
+    <string name="register">REGISTER</string>
+    <string name="user_name">user name</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="how_can_you_nrecycle_your_remaining_waste">How can you\nRecycle your remaining waste</string>
+    <string name="with_you_we_will_help_ecology">With you we will help ecology</string>
+    <string name="my_waste_pick_up">My Waste pick up</string>
+    <string name="pick_up">Pickup</string>
+    <string name="education">Education</string>
+    <string name="request_for_pick_up">Request for pick up</string>
+    <string name="login">Login</string>
+    <string name="belum_punya_akun">Belum punya akun ?  </string>
 </resources>
