--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,11 @@
     <string name="request_for_pick_up">Request for pick up</string>
     <string name="login">Login</string>
     <string name="belum_punya_akun">Belum punya akun ?  </string>
+    <string name="gallery">gallery</string>
+    <string name="analyze">analyze</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="result">hasil</string>
+    <string name="location">location</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
