--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="title_activity_maps">MapsActivity</string>
     <string name="name">Arnold Armando Suwuh</string>
     <string name="more_services">More services</string>
+    <string name="gmail">arnoldarmando07@gmail.com</string>
+    <string name="gg">gg</string>
 </resources>
