--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="more_services">More services</string>
     <string name="gmail">arnoldarmando07@gmail.com</string>
     <string name="gg">gg</string>
+    <string name="logout">logout</string>
 </resources>
