--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="gmail">arnoldarmando07@gmail.com</string>
     <string name="gg">gg</string>
     <string name="logout">logout</string>
+    <string name="resikapp">ResikApp</string>
 </resources>
