--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="gallery">gallery</string>
     <string name="analyze">analyze</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="result">hasil</string>
+    <string name="result">Kantong Plastik</string>
     <string name="location">location</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="name">Arnold Armando Suwuh</string>
